src/styles/components/_home-carousel.scss
.home-carousel {
  @include respond((
    background-color:  rgba(0, 0, 0, 0.75),
    padding: (40px percentage(15/320)) null (100px percentage(130px/$bp-xl)),
  ));

  &__content {

  }


  &__heading-group {

  }

  &__heading {
    @include font(roboto-condensed-bold);
    @include respond((
      color: $white,
      width: null null 300px,
      font-size: 36px null 48px,
      line-height: 42px null .9,
    ));
  }

  &__subheading {
    @include font(roboto);
    @include respond((
      width: null null 320px,
      margin-top: 22px null 40px,
      color: $white,
      font-size: 14px null 16px,
      line-height: 20px null 24px,
    ));
  }


  &__carousel {
    font-size: 0;
    white-space: nowrap;
    position: relative;
    overflow: hidden;
    @include respond((
      margin-top: 30px null 50px,
      padding-bottom: 50px,
      margin-left: null null percentage(-130/1180),
      margin-right: null null percentage(-130/1180),
      padding-left: null null percentage(130/1180),
      padding-right: null null percentage(130/1180),
    ));
  }


  &__slide {
    position: relative;
    @include respond((
      display: block null inline-block,
      width: 100% null percentage(380px/1180px),
      margin: null null (0 percentage(10/1180)),
    ));

    & + & {
      @include breakpoint(md down) {
        position: absolute;
        opacity: 0;
        pointer-events: none;
      }
    }

    &:hover,
    &.is-selected {
      .home-carousel__slide-content {
        opacity: 1;
      }
    }
  }


  &__image {
    @include aspect-ratio(380, 282);

    @include breakpoint(lg) {
      @include aspect-ratio(380, 228);
    }

    img {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      object-fit: cover;
    }
  }


  &__slide-content {
    &:active,
    &:link,
    &:visited {
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      color: $white;
      background-color: rgba(0, 171, 255, 0.75);
      background-blend-mode: multiply;
      opacity: 0;
      transition: all .3s;

      &:hover {
        color: $white;
      }
    }
  }


  &__eyebrow {
    text-transform: uppercase;
    @include font(roboto-condensed-bold);
    @include respond((
      margin-top: 27px,
      margin-bottom: auto,
      font-size: 14px null 20px,
      line-height: 1 null 24px,
    ));
  }


  &__title {
    position: relative;
    @include font(roboto-bold);
    @include respond((
      margin-bottom: auto,
      top: -30px null -10px,
      font-size: 20px null 28px,
      line-height: 1,
    ));
  }


  &__cta {
    display: flex;
    align-items: center;
    white-space: nowrap;
    position: relative;
    @include btn--transparent-light;
    @include respond((
      max-width: auto null 223px,
      height: 31px,
      margin-top: 20px null -24px,
      font-size: 20px,
      float: null null right,
    ));

    svg {
      @include respond((
        display: inline-block,
        width: 8px,
        height: 12px,
        margin-left: 18px,
      ));
    }
  }



  // ENABLED CAROUSEL
  .flickity-enabled {

    .home-carousel__slide + .home-carousel__slide {
      opacity: 1;
      pointer-events: auto;
    }

    .flickity-page-dots {
      display: flex;
      justify-content: center;
      align-items: center;
      bottom: 0;
      height: 24px,
    }

    .dot {
      @include respond((
        background-color: $white,
      ));
    }

    .flickity-prev-next-button {
      @include respond((
        display: none null block,
        background-color: transparent,
        transform: translateY(-44px),
      ));

      &.previous {
        @include respond((
          left: 0 null calc(100% * 130 / 1440 - 60px),
        ));
      }

      &.next {
        @include respond((
          right: 0 null calc(100% * 130 / 1440 - 60px),
        ));
      }

      svg {
        transform: scale(.6);
      }

      & svg,
      & .arrow {
        fill: $white;
      }
    }
  }



}

